--- a/public/index.html
+++ b/public/index.html
@@ -54,15 +54,14 @@
 <main>
 
 
-	
+	<nav class="navbar">
 
+  <div class="logo">
+    <a href="https://eens.netlify.app">
+      <img src="/images/logo.svg" alt="Extra Ecclesia Nulla Salus">
+    </a>
+  </div>
 
-<div class="logo">
-    <span class="tau">Τ</span>
-    <span class="phrase">Extra Ecclesiam Nulla Salus</span>
-</div>
-
-<nav class="navbar">
   <div class="hamburger">
     <div class="line"></div>
     <div class="line"></div>
