--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,14 @@
 <main>
 
 
-	<h1>(&tau;) Extra Ecclesiam Nulla Salus</h1>
-
+	
 <nav class="navbar">
 
-
+  <div class="logo">
+    <a href="https://eens.netlify.app">
+      <img src="/images/logo.svg" alt="Extra Ecclesiam Nulla Salus">
+    </a>
+  </div>
 
   <div class="hamburger">
     <div class="line"></div>
@@ -70,9 +73,8 @@
     
     
   </ul>
+  
 </nav>
-
-<hr>
 
 
 
