--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,8 @@
 	
 <nav class="navbar">
 
-  <div class="logo">
-    <a href="https://eens.netlify.app">
-      <img src="/images/logo.svg" alt="Extra Ecclesiam Nulla Salus">
-    </a>
-  </div>
+<h1>(&tau;) Extra Ecclesiam Nulla Salus</h1>
+
 
   <div class="hamburger">
     <div class="line"></div>
