--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,9 @@
 	
 <nav class="navbar">
 
+<a href="eens.netlify.app">
 <h1>(&tau;) Extra Ecclesiam Nulla Salus</h1>
+</a>
 
 
   <div class="hamburger">
