--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
 <h1>
 <a href="https://eens.netlify.app">
-(&Tau;) Extra Ecclesiam Nulla Salus
+(&tau;) Extra Ecclesiam Nulla Salus
 </a>
 </h1>
 
