--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
 	
 <nav class="navbar">
 
+<img src="/images/banner.png"/>
+
 <h1>
 <a href="https://eens.netlify.app">
 (&tau;) Extra Ecclesiam Nulla Salus
