--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,9 @@
 	
 <nav class="navbar">
 
+<div class="banner">
 <img src="/images/banner.png"/>
+</div>
 
 <h1>
 <a href="https://eens.netlify.app">
