--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,23 @@
 
 
 
+<section class="featured-posts-section">
+  <h2>Featured Posts</h2>
+  <div class="posts-grid">
+  </div>
+</section>
+
+
+
+
+<section class="latest-posts-section">
+  <h2>Latest Blog Posts</h2>
+  <div class="posts-grid">
+  </div>
+</section>
+
+
+
 
 
 <div class="content">
