--- a/public/index.html
+++ b/public/index.html
@@ -57,13 +57,16 @@
 
 
 	<nav class="navbar">
-  <div class="logo">
-    <a href="https://eens.netlify.app">(&tau;) Extra Ecclesiam Nulla Salus</a>
-  </div>
 
-  <div class="banner">
-    <img src="/images/banner.png" alt="Site Banner" />
-  </div>
+<div class="logo">
+<a href="https://eens.netlify.app">
+(&tau;) Extra Ecclesiam Nulla Salus
+</a>
+</div>
+
+<div class="banner">
+<img src="/images/banner.png"/>
+</div>
 
   <div class="hamburger">
     <div class="line"></div>
@@ -75,6 +78,7 @@
     
     
   </ul>
+  
 </nav>
 
 
