--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,15 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 
+
+<meta name="twitter:card" content="https://eens-en.netlify.app/" />
+<meta name="twitter:site" content="@BroMatthewCap" />
+<meta name="twitter:creator" content="@BroMatthewCap" />
+<meta name="twitter:title" content="Extra Ecclesia Nulla Salus" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:image" content="https://eens-en.netlify.app/" />
+
+
 </head>
 
 <body>
